new_service.py: update templates and add features
Signed-off-by: Paulo Flabiano Smorigo <pfsmorigo@canonical.com>

--- a/scripts/skel/debian/new_service.install.j2
+++ b/scripts/skel/debian/new_service.install.j2
@@ -1,1 +1,3 @@
 {{ name }}/my_script.sh usr/libexec/{{ name }}/
+{{ name }}/environment etc/seceng/{{ name }}/
+{{ name }}/config.ini etc/seceng/{{ name }}/
