--- a/scripts/skel/debian/new_service.timer.j2
+++ b/scripts/skel/debian/new_service.timer.j2
@@ -3,7 +3,8 @@ Description = My Service
 
 [Timer]
 OnBootSec = 15min
-OnUnitActiveSec = 1d
+#OnUnitActiveSec = 1d
+#OnCalendar=*-*-* 09:00:00
 Persistent=true
 
 [Install]
